add ignite database